# helper_fs

./: CMakeLists.txt  README.md  makefile  test.sh
examples/: CMakeLists.txt  csv_files.c  text_files.c
examples/data/: output_database.csv
include/: csv.h  file.h  str.h
src/: csv.c  file.c  str.c
test/: hello.txt  main.c  test
